<resources>
    <string name="app_name">Mews</string>
    <string name="by_murf">by Murf</string>
    <string name="username">Username</string>
    <string name="login">LOGIN</string>
    <string name="todo">TODO</string>
    <string name="latest_news">Latest News</string>
    <string name="daily_feed">Daily feed</string>
    <string name="add_new_post">Add New Post</string>
    <string name="required">*</string>
    <string name="post_title">Title</string>
    <string name="post_content">Content</string>
    <string name="post_location">Location</string>
    <string name="favourite_posts">Favourite Posts</string>
</resources>