<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_800"
    tools:context=".Activities.AddPostActivity">

    <TextView
        android:id="@+id/pageTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_medium"
        android:paddingHorizontal="18dp"
        android:text="@string/add_new_post"
        android:textColor="@color/pink"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="18dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout6">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/locationLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/post_location"
                android:textColor="@color/white"
                android:textSize="18sp" />

        </LinearLayout>

        <EditText
            android:id="@+id/postLocationInput"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="40dp"
            android:autofillHints=""
            android:background="@drawable/ic_input_box"
            android:ems="10"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:paddingHorizontal="10dp"
            android:textColor="@color/white"
            tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck"
            tools:layout_editor_absoluteX="108dp"
            tools:layout_editor_absoluteY="164dp" />

        <TextView
            android:id="@+id/locationError"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:alpha="0"
            android:text="This field is required"
            android:textColor="@color/pink" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="18dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pageTitle"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/titleLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/post_title"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/titleAstrike"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingHorizontal="4dp"
                android:text="@string/required"
                android:textColor="@color/pink" />
        </LinearLayout>

        <EditText
            android:id="@+id/postTitleInput"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="40dp"
            android:autofillHints=""
            android:background="@drawable/ic_input_box"
            android:ems="10"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:paddingHorizontal="10dp"
            android:textColor="@color/white"
            tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck"
            tools:layout_editor_absoluteX="108dp"
            tools:layout_editor_absoluteY="164dp" />

        <TextView
            android:id="@+id/titleError"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:alpha="0"
            android:text="This field is required"
            android:textColor="@color/pink" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="18dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/contentLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/post_content"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/contentAstrike"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingHorizontal="4dp"
                android:text="@string/required"
                android:textColor="@color/pink" />
        </LinearLayout>

        <EditText
            android:id="@+id/postContentInput"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="40dp"
            android:autofillHints=""
            android:background="@drawable/ic_input_box"
            android:ems="10"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:paddingHorizontal="10dp"
            android:textColor="@color/white"
            tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck"
            tools:layout_editor_absoluteX="108dp"
            tools:layout_editor_absoluteY="164dp" />

        <TextView
            android:id="@+id/contentError"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:alpha="0"
            android:text="This field is required"
            android:textColor="@color/pink" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout7"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="18dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout5">

        <Button
            android:id="@+id/cancelButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="30dp"
            android:layout_weight="1"
            android:background="@drawable/ic_button"
            android:text="@android:string/cancel"
            android:textColor="@color/light_purple"
            android:textSize="20sp" />

        <Button
            android:id="@+id/postButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_weight="1"
            android:background="@drawable/ic_button"
            android:text="POST"
            android:textColor="@color/light_purple"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="18dp"
        android:background="@drawable/add_image_input"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingVertical="40dp"
        app:layout_constraintBottom_toTopOf="@id/linearLayout5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4"
        app:layout_constraintVertical_bias="0.0">

        <ImageButton
            android:id="@+id/addImageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:layout_marginVertical="5dp"
            android:background="@drawable/ic_addimagebtn"
            android:contentDescription="@string/todo"
            android:visibility="visible" />

        <TextView
            android:id="@+id/addImageLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:layout_marginVertical="5dp"
            android:text="Add Post Image"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:visibility="visible" />

        <ImageView
            android:id="@+id/imagePreview"
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            android:maxHeight="120dp"
            android:scaleType="fitCenter"
            android:visibility="gone"
            tools:srcCompat="@drawable/placeholder" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>